<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorAccent"
    tools:context=".ui.login.LoginFragment">

    <com.example.netflix.ui.customview.RoundedImageView
        android:id="@+id/roundedImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_netflix"
        app:bottomClipRadius="32dp"
        app:layout_constraintBottom_toTopOf="@id/bottomBackgroundGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cardview_corner_radius_large"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@id/bottomLoginCardGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundedImageView"
        app:layout_constraintVertical_bias="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_account"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="emailAddress"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_forgot_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/login_click_here"
                    android:textColor="@color/login_hover" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:enabled="false"
                android:text="@string/action_sign_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
                app:layout_constraintVertical_bias="0.39" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomBackgroundGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomLoginCardGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>